# python-project-140

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
brain_games/: brain_games.py  cli.py  game_logic.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/path/to/venv./: pyvenv.cfg
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
